- input language in nav - use other listening icon - styling issues

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
   "TITLE": "Drei-Länder-Hack - Tulpen-App",
   "LISTEN": "Zuhören",
   "STOP.LISTENING": "Zuhören stoppen",
-  "RESET": "Zurpcksetzen",
+  "RESET": "Zurücksetzen",
   "READ.OUT": "Vorlesen",
   "OUTPUT.LANGUAGE": "Ausgabesprache",
   "en": "Englisch",
