- added italian and finnish - refactored component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -9,6 +9,8 @@
   "de": "Deutsch",
   "hu": "Ungarisch",
   "fr": "Französisch",
+  "it": "Italienisch",
+  "fi": "Finnisch",
   "TULPEN.MAGIC": "Tulpenmagie",
   "RECOGNIZED.INPUT": "Erkannte Eingabe",
   "TRANSLATION": "Übersetzung"
