--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,8 @@
   "de": "German",
   "hu": "Hungarian",
   "fr": "French",
+  "it": "Italian",
+  "fi": "Finnish",
   "TULPEN.MAGIC": "Tulpen Magic",
   "RECOGNIZED.INPUT": "Recognized Input",
   "TRANSLATION": "Translation"
