- translation fix - dropdown input language

--- a/src/assets/i18n/de-at.json
+++ b/src/assets/i18n/de-at.json
@@ -1,5 +1,5 @@
 {
-  "TITLE": "Drei-Länder-Hack - Tulpen-App",
+  "TITLE": "Drei-Länder-Hack - Tulpen-App (Österreich)",
   "LISTEN": "Zuhören",
   "STOP.LISTENING": "Zuhören stoppen",
   "RESET": "Zurücksetzen",
