--- a/src/assets/i18n/de-ch.json
+++ b/src/assets/i18n/de-ch.json
@@ -1,25 +1,10 @@
 {
-  "TITLE": "Drei-Länder-Hack - Tulpen-App",
+  "TITLE": "Drei-Länder-Hack - Tulpen-App (Schweiz)",
   "LISTEN": "Zuhören",
   "STOP.LISTENING": "Zuhören stoppen",
   "RESET": "Zurücksetzen",
   "READ.OUT": "Vorlesen",
   "OUTPUT.LANGUAGE": "Ausgabesprache",
-  "en": "English",
-  "de-at": "Deutsch (Österreich)",
-  "fr-fr": "Français (France)",
-  "da":"Dansk",
-  "sl":"Slovenščina",
-  "it-it":"italiano (Italia)",
-  "nl-be":"Nederlands (België)",
-  "nl-nl":"Nederlands (Nederland)",
-  "fr-be":"français (Belgique)",
-  "sk":"slovenčina (Slovensko)",
-  "it-ch":"italiano (Svizzera)",
-  "de-ch":"Deutsch (Schweiz)",
-  "fr-ch":"français (Suisse)",
-  "sv-se":"svenska",
-  "hu":"magyar",
   "TULPEN.MAGIC": "Tulpenmagie",
   "RECOGNIZED.INPUT": "Erkannte Eingabe",
   "TRANSLATION": "Übersetzung"
