--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,18 +8,18 @@
   "en": "English",
   "de-at": "Deutsch (Österreich)",
   "fr-fr": "Français (France)",
-  "da":"Dansk",
-  "sl":"Slovenščina",
-  "it-it":"italiano (Italia)",
-  "nl-be":"Nederlands (België)",
-  "nl-nl":"Nederlands (Nederland)",
-  "fr-be":"français (Belgique)",
-  "sk":"slovenčina (Slovensko)",
-  "it-ch":"italiano (Svizzera)",
-  "de-ch":"Deutsch (Schweiz)",
-  "fr-ch":"français (Suisse)",
-  "sv-se":"svenska",
-  "hu":"magyar",
+  "da": "Dansk",
+  "sl": "Slovenščina",
+  "it-it": "Italiano (Italia)",
+  "nl-be": "Nederlands (België)",
+  "nl-nl": "Nederlands (Nederland)",
+  "fr-be": "Français (Belgique)",
+  "sk": "Slovenčina (Slovensko)",
+  "it-ch": "Italiano (Svizzera)",
+  "de-ch": "Deutsch (Schweiz)",
+  "fr-ch": "Français (Suisse)",
+  "sv-se": "Svenska",
+  "hu": "Magyar",
   "TULPEN.MAGIC": "Tulpen Magic",
   "RECOGNIZED.INPUT": "Recognized Input",
   "TRANSLATION": "Translation"
