--- a/src/assets/i18n/sv-se.json
+++ b/src/assets/i18n/sv-se.json
@@ -1,17 +1,3 @@
 {
-  "TITLE": "Drei-Länder-Hack - Tulpen-App",
-  "LISTEN": "Zuhören",
-  "STOP.LISTENING": "Zuhören stoppen",
-  "RESET": "Zurücksetzen",
-  "READ.OUT": "Vorlesen",
-  "OUTPUT.LANGUAGE": "Ausgabesprache",
-  "en": "Englisch",
-  "de": "Deutsch",
-  "hu": "Ungarisch",
-  "fr": "Französisch",
-  "it": "Italienisch",
-  "fi": "Finnisch",
-  "TULPEN.MAGIC": "Tulpenmagie",
-  "RECOGNIZED.INPUT": "Erkannte Eingabe",
-  "TRANSLATION": "Übersetzung"
+  "TITLE": "Drei-Länder-Hack - Tulpen-App (Svenska)"
 }
