--- a/src/assets/i18n/de-ch.json
+++ b/src/assets/i18n/de-ch.json
@@ -7,5 +7,6 @@
   "OUTPUT.LANGUAGE": "Ausgabesprache",
   "TULPEN.MAGIC": "Tulpenmagie",
   "RECOGNIZED.INPUT": "Erkannte Eingabe",
-  "TRANSLATION": "Übersetzung"
+  "TRANSLATION": "Übersetzung",
+  "INTERNATIONAL": "International"
 }
