--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,6 @@
   "hu": "Magyar",
   "TULPEN.MAGIC": "Tulpen Magic",
   "RECOGNIZED.INPUT": "Recognized Input",
-  "TRANSLATION": "Translation"
+  "TRANSLATION": "Translation",
+  "INTERNATIONAL": "International"
 }
